mongo-express-deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
   selector:
      app: mongo-express
   type: LoadBalancer 
   ports:
    - protocol: TCP
      ports: 8081
      targetPort: 8081
      nodePort: 30000

---


apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: myapp-ingress
spec:
   rules:
     - host: 
       http:
         paths:
           - backend:
               serviceName:
               servicePort:
